--- a/SuperID/app/src/main/res/values/strings.xml
+++ b/SuperID/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">SuperID2</string>
+    <string name="title_activity_main_activitdasy2asd">MainActivitdasy2asd</string>
+    <string name="title_activity_main_activity2asd">MainActivity2asd</string>
 </resources>
