inicio tela login(sem funcionalidades)

--- a/SuperID/app/src/main/res/values/strings.xml
+++ b/SuperID/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">SuperID</string>
     <string name="title_activity_cadastro">CadastroActivity</string>
+    <string name="title_activity_login">LoginActivity</string>
 </resources>
