--- a/SuperID/app/src/main/res/values/strings.xml
+++ b/SuperID/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="title_activity_home">Home</string>
     <string name="title_activity_welcome">Welcome</string>
     <string name="title_activity_main">MainActivity</string>
+    <string name="title_activity_termos">TermosActivity</string>
 </resources>
