--- a/SuperID/app/src/main/res/values/strings.xml
+++ b/SuperID/app/src/main/res/values/strings.xml
@@ -5,5 +5,8 @@
     <string name="title_activity_home">Home</string>
     <string name="title_activity_welcome">Welcome</string>
     <string name="title_activity_main">MainActivity</string>
-    <string name="title_activity_termos">TermosActivity</string>
+    <string name="title_activity_termos">TermsActivity</string>
+    <string name="title_activity_new_password">NewPassword</string>
+    <string name="title_activity_new_category">NewCategoryActivity</string>
+    <string name="title_activity_qrcode">QRcodeActivity</string>
 </resources>
